--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ng-bootstrap/ng-bootstrap": "11.0.0-rc.0",
     "@ng-select/ng-select": "^6.1.0",
     "@ngu/carousel": "^6.0.0",
+    "@ngx-countries/countries": "^1.0.0",
     "@ngx-loading-bar/http-client": "^6.0.2",
     "@ngx-loading-bar/router": "^6.0.2",
     "@ngx-translate/core": "13.0.0",
