--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "@ciri/ngx-countdown": "^1.0.0",
     "@ctrl/ngx-csv": "4.0.0",
     "@ctrl/ngx-rightclick": "4.0.0",
-    "@fullcalendar/angular": "5.7.1",
-    "@fullcalendar/daygrid": "5.7.2",
+    "@fullcalendar/angular": "^5.7.1",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^5.7.2",
     "@fullcalendar/interaction": "5.7.2",
     "@fullcalendar/list": "5.7.2",
     "@fullcalendar/timegrid": "5.7.2",
