fonts optimization change

--- a/angular.json
+++ b/angular.json
@@ -79,7 +79,7 @@
               "optimization": {
                 "scripts": true,
                 "styles": true,
-                "fonts": true
+                "fonts": false
               },
               "outputHashing": "all",
               "sourceMap": true,
