--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "@ciri/ngx-countdown": "^1.0.0",
     "@ctrl/ngx-csv": "4.0.0",
     "@ctrl/ngx-rightclick": "4.0.0",
-    "@fullcalendar/angular": "^5.7.1",
-    "@fullcalendar/core": "^6.1.8",
-    "@fullcalendar/daygrid": "^5.7.2",
-    "@fullcalendar/interaction": "5.7.2",
-    "@fullcalendar/list": "5.7.2",
-    "@fullcalendar/timegrid": "5.7.2",
+    "@fullcalendar/angular": "6.1.9",
+    "@fullcalendar/common": "^5.11.5",
+    "@fullcalendar/daygrid": "6.1.9",
+    "@fullcalendar/interaction": "6.1.9",
+    "@fullcalendar/list": "6.1.9",
+    "@fullcalendar/timegrid": "6.1.9",
     "@ng-bootstrap/ng-bootstrap": "11.0.0-rc.0",
     "@ng-select/ng-select": "^6.1.0",
     "@ngu/carousel": "^6.0.0",
