--- a/angular.json
+++ b/angular.json
@@ -83,14 +83,14 @@
               "optimization": {
                 "scripts": true,
                 "styles": true,
-                "fonts": true
+                "fonts": false
               },
               "outputHashing": "all",
               "sourceMap": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": false,
+              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
