--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "lib": ["es2018", "dom"],
     "paths": {
       "@core": ["@core/"],
+      "@shared/*": ["app/shared/*"],
+      "@problems/*": ["app/modules/problems/*"],
+      "@contests/*": ["app/modules/contests/*"],
       "@fake-db": ["@fake-db/"],
       "environments": ["environments/"]
     }
@@ -23,6 +26,5 @@
     "fullTemplateTypeCheck": false,
     "strictInjectionParameters": false,
     "strictPropertyInitialization": false
-
   }
 }
