refactoring base component & add global service & contest og image color change

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
       "@shared/*": ["app/shared/*"],
       "@problems/*": ["app/modules/problems/*"],
       "@contests/*": ["app/modules/contests/*"],
+      "@challenges/*": ["app/modules/challenges/*"],
+      "@users/*": ["app/modules/users/*"],
       "@fake-db": ["@fake-db/"],
       "environments": ["environments/"]
     }
