--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,19 +10,41 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
-    "target": "es2020",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"],
+    "target": "ES2022",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2018",
+      "dom"
+    ],
     "paths": {
-      "@core": ["@core/"],
-      "@shared/*": ["app/shared/*"],
-      "@problems/*": ["app/modules/problems/*"],
-      "@contests/*": ["app/modules/contests/*"],
-      "@challenges/*": ["app/modules/challenges/*"],
-      "@users/*": ["app/modules/users/*"],
-      "@fake-db": ["@fake-db/"],
-      "environments": ["environments/"]
-    }
+      "@core": [
+        "@core/"
+      ],
+      "@shared/*": [
+        "app/shared/*"
+      ],
+      "@problems/*": [
+        "app/modules/problems/*"
+      ],
+      "@contests/*": [
+        "app/modules/contests/*"
+      ],
+      "@challenges/*": [
+        "app/modules/challenges/*"
+      ],
+      "@users/*": [
+        "app/modules/users/*"
+      ],
+      "@fake-db": [
+        "@fake-db/"
+      ],
+      "environments": [
+        "environments/"
+      ]
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": false,
