--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@fullcalendar/interaction": "6.1.9",
     "@fullcalendar/list": "6.1.9",
     "@fullcalendar/timegrid": "6.1.9",
-    "@ng-bootstrap/ng-bootstrap": "12.0.0",
+    "@ng-bootstrap/ng-bootstrap": "11.0.0-rc.0",
     "@ng-select/ng-select": "^12.0.4",
     "@ngx-loading-bar/http-client": "^6.0.2",
     "@ngx-loading-bar/router": "^6.0.2",
@@ -50,7 +50,7 @@
     "animate.css": "4.1.1",
     "apexcharts": "3.24.0",
     "autoprefixer": "10.4.16",
-    "bootstrap": "4.5.0",
+    "bootstrap": "4.6.1",
     "brackets-manager": "^1.6.4",
     "brackets-model": "^1.5.0",
     "brackets-viewer": "^1.6.2",
