--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "chart.js": "4.4.0",
     "core-js": "3.33.2",
     "feather-icons": "4.29.1",
+    "flag-icons": "^6.15.0",
     "gzipper": "^7.2.0",
     "hammerjs": "^2.0.8",
+    "i18n-iso-countries": "^7.7.0",
     "katex": "0.13.11",
     "lodash": "4.17.21",
     "ng-apexcharts": "1.8.0",
