--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
