--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,9 @@
       "@users/*": [
         "app/modules/users/*"
       ],
+      "@auth/*": [
+        "app/auth/*"
+      ],
       "environments": [
         "environments/"
       ]
