problems module lazy loading & other refactorings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,11 @@
       "dom"
     ],
     "paths": {
-      "@core": [
+      "@core/*": [
         "core/*"
+      ],
+      "@layout/*": [
+        "app/layout/*"
       ],
       "@shared/*": [
         "app/shared/*"
