--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "i18n-iso-countries": "^7.7.0",
     "katex": "0.13.11",
     "lodash": "4.17.21",
+    "monaco-editor": "^0.44.0",
     "ng-apexcharts": "1.8.0",
     "ng-block-ui": "4.0.1",
     "ng2-dragula": "5.0.1",
@@ -74,7 +75,7 @@
     "ngx-countup": "^13.1.0",
     "ngx-highlightjs": "^10.0.0",
     "ngx-mask": "16.4.1",
-    "ngx-monaco-editor": "^12.0.0",
+    "ngx-monaco-editor-v2": "^17.0.1",
     "ngx-online-status": "^2.0.0",
     "ngx-quill": "24.0.0",
     "ngx-scrollbar": "^13.0.3",
