[CHANGE] font optimization enable on prod

--- a/angular.json
+++ b/angular.json
@@ -85,7 +85,7 @@
               "optimization": {
                 "scripts": true,
                 "styles": true,
-                "fonts": false
+                "fonts": true
               },
               "outputHashing": "all",
               "sourceMap": true,
