[ADD] brotli compress script to package.json

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build-prod": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build --configuration production --base-href /static/frontend/ && npm run remove-map && npm run compress && npm run move-index",
     "remove-map": "cd /home/cpython/server/static/frontend && grep -rli 'sourceMappingURL' * | xargs -i@ sed -i 's/sourceMappingURL/a/g' @",
     "compress": "gzipper compress /home/cpython/server/static/frontend",
+    "compress-brotli": "gzipper compress /home/cpython/server/static/frontend --brotli",
     "move-index": "mv /home/cpython/server/static/frontend/index.html /home/cpython/server/apps/angular/templates/",
     "lint": "ng lint",
     "e2e": "ng e2e"
