[ROAD TO 99] lighthouse

--- a/angular.json
+++ b/angular.json
@@ -81,7 +81,7 @@
               },
               "outputHashing": "all",
               "sourceMap": true,
-              "namedChunks": false,
+              "namedChunks": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
