[ROAD TO 99] lighthouse

--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "start": "set NODE_OPTIONS=--max_old_space_size=8192 & ng serve --open",
     "build": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
     "build:prod": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build --configuration production",
-    "build-prod": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build --configuration production --base-href /static/frontend/ && npm run remove-map && npm run compress && npm run move-index",
+    "build-prod": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build --configuration production --base-href /static/frontend/ && npm run compress && npm run move-index",
     "compress": "gzipper compress /home/cpython/static/frontend",
     "compress-brotli": "gzipper compress /home/cpython/static/frontend --brotli",
-    "remove-map": "cd /home/cpython/static/frontend && grep -rli 'sourceMappingURL' * | xargs -i@ sed -i 's/sourceMappingURL/a/g' @",
     "move-index": "mv /home/cpython/static/frontend/index.html /home/cpython/server/apps/angular/templates/",
     "build:prod-stats": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build --configuration production --stats-json",
     "bundle-analyzer": "webpack-bundle-analyzer /home/cpython/server/static/frontend/stats.json",
