--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.1.2",
+    "@angular/animations": "17.0.3",
     "@angular/cdk": "17.1.2",
-    "@angular/common": "17.1.2",
-    "@angular/compiler": "17.1.2",
-    "@angular/core": "17.1.2",
+    "@angular/common": "17.0.3",
+    "@angular/compiler": "17.0.3",
+    "@angular/core": "17.0.3",
     "@angular/flex-layout": "15.0.0-beta.42",
-    "@angular/forms": "17.1.2",
-    "@angular/localize": "17.1.2",
-    "@angular/platform-browser": "17.1.2",
-    "@angular/platform-browser-dynamic": "17.1.2",
-    "@angular/router": "17.1.2",
+    "@angular/forms": "17.0.3",
+    "@angular/localize": "17.0.3",
+    "@angular/platform-browser": "17.0.3",
+    "@angular/platform-browser-dynamic": "17.0.3",
+    "@angular/router": "17.0.3",
     "@fullcalendar/angular": "6.1.9",
     "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/daygrid": "6.1.9",
@@ -37,6 +37,7 @@
     "@fullcalendar/timegrid": "6.1.9",
     "@ng-bootstrap/ng-bootstrap": "11.0.0-rc.0",
     "@ng-select/ng-select": "^12.0.4",
+    "@ngbracket/ngx-layout": "^17.0.1",
     "@ngx-loading-bar/http-client": "^6.0.2",
     "@ngx-loading-bar/router": "^6.0.2",
     "@ngx-translate/core": "15.0.0",
@@ -93,8 +94,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "17.1.2",
     "@angular/cli": "17.1.2",
-    "@angular/compiler-cli": "17.1.2",
-    "@angular/language-service": "17.1.2",
+    "@angular/compiler-cli": "17.0.3",
+    "@angular/language-service": "17.0.3",
     "@angularclass/hmr": "3.0.0",
     "@types/node": "12.11.1",
     "codelyzer": "6.0.1",
