--- a/angular.json
+++ b/angular.json
@@ -80,8 +80,8 @@
                 "fonts": true
               },
               "outputHashing": "all",
-              "sourceMap": true,
-              "namedChunks": true,
+              "sourceMap": false,
+              "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
