--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,4 +21,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            touch /home/github
+            cd /home/cpython/client && git pull && npm run build-prod
+            rm -r /home/cpython/server/static/frontend
+            mv /home/cpython/client/dist /home/cpython/server/static/frontend
+            systemctl restart kep@gunicorn
