--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
     "ng": "ng",
     "start": "set NODE_OPTIONS=--max_old_space_size=8192 & ng serve --host 0.0.0.0 --open",
     "build": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build",
-    "build:prod": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build --configuration production",
     "build-prod": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build --configuration production --base-href /static/frontend/",
     "compress": "gzipper compress ./dist",
     "compress-brotli": "gzipper compress ./dist --brotli",
-    "move-index": "mv ./dist/index.html /home/cpython/server/apps/angular/templates/",
+    "move-index": "mv ./dist/browser/index.html /home/cpython/server/apps/angular/templates/",
     "build:prod-stats": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build --configuration production --stats-json",
     "bundle-analyzer": "webpack-bundle-analyzer /home/cpython/server/static/frontend/stats.json",
     "test": "ng test",
