--- a/package.json
+++ b/package.json
@@ -19,84 +19,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^17.0.2",
     "@angular/animations": "^19.2.1",
-    "@angular/cdk": "^17.3.2",
+    "@angular/cdk": "^19.2.2",
     "@angular/common": "^19.2.1",
     "@angular/compiler": "^19.2.1",
     "@angular/core": "^19.2.1",
-    "@angular/fire": "^17.0.1",
     "@angular/flex-layout": "15.0.0-beta.42",
     "@angular/forms": "^19.2.1",
-    "@angular/google-maps": "^17.3.4",
-    "@angular/material": "^17.3.2",
     "@angular/platform-browser": "^19.2.1",
     "@angular/platform-browser-dynamic": "^19.2.1",
     "@angular/router": "^19.2.1",
-    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@fullcalendar/angular": "6.1.9",
-    "@fullcalendar/common": "^5.11.5",
     "@fullcalendar/daygrid": "6.1.9",
     "@fullcalendar/interaction": "6.1.9",
     "@fullcalendar/list": "6.1.9",
     "@fullcalendar/timegrid": "6.1.9",
-    "@geometricpanda/angular-tilt": "^0.4.0",
-    "@kolkov/angular-editor": "^3.0.0-beta.0",
-    "@ks89/angular-modal-gallery": "^11.1.2",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
-    "@ng-select/ng-select": "^12.0.7",
-    "@ngbracket/ngx-layout": "^17.0.1",
-    "@ngneat/input-mask": "^6.1.0",
-    "@ngx-gallery/lightbox": "^5.0.0-beta.0",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ng-select/ng-select": "^14.2.3",
+    "@ngbracket/ngx-layout": "^19.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@sweetalert2/ngx-sweetalert2": "^13.0.0",
-    "@swimlane/ngx-datatable": "^20.1.0",
     "angular-animations": "^0.11.0",
     "angular-calendar": "^0.31.0",
-    "angular-dual-listbox": "^7.0.0",
-    "angular-shepherd": "^18.0.2",
-    "angularx-flatpickr": "^7.3.0",
-    "animate.css": "^4.1.1",
+    "angular-shepherd": "^19.0.2",
     "apexcharts": "^4.0.0",
     "bootstrap": "5.3.3",
-    "brackets-manager": "^1.6.4",
-    "brackets-model": "^1.5.0",
-    "brackets-viewer": "^1.6.2",
-    "chart.js": "^4.4.2",
-    "chartjs-plugin-datalabels": "^2.2.0",
-    "date-fns": "^3.6.0",
     "feather-icons": "4.29.1",
     "gzipper": "^7.2.0",
+    "brackets-manager": "^1.6.4",
     "i18n-iso-countries": "^7.7.0",
-    "intl-tel-input": "^17.0.3",
-    "katex": "^0.16.11",
-    "keen-slider": "^6.8.6",
-    "leaflet": "^1.9.4",
-    "lightgallery": "^2.7.2",
-    "lodash": "4.17.21",
-    "moment": "^2.30.1",
     "monaco-editor": "^0.44.0",
     "ng-apexcharts": "^1.12.0",
     "ng-block-ui": "4.0.1",
-    "ng-gallery": "^11.0.0",
-    "ng2-charts": "^6.0.0",
     "ng2-dragula": "5.1.0",
     "ng2-nouislider": "2.0.0",
     "ngx-capture": "^0.13.0",
     "ngx-color-picker": "^15.0.0",
-    "ngx-colors": "^3.5.3",
     "ngx-countup": "^13.1.0",
-    "ngx-dropzone": "^3.1.0",
-    "ngx-dropzone-wrapper": "^16.0.0",
-    "ngx-easy-table": "^15.5.0",
-    "ngx-echarts": "^17.1.0",
-    "ngx-editor": "^17.0.2",
-    "ngx-filepond": "^7.0.3",
     "ngx-highlightjs": "^10.0.0",
-    "ngx-mask": "16.4.1",
-    "ngx-mat-intl-tel-input": "^5.0.0",
     "ngx-monaco-editor-v2": "^17.0.1",
-    "ngx-online-status": "^2.0.0",
     "ngx-owl-carousel-o": "^17.0.0",
     "ngx-quill": "^26.0.9",
     "ngx-scrollbar": "^13.0.3",
@@ -110,11 +71,8 @@
     "rxjs": "7.8.1",
     "sass": "^1.75.0",
     "simplebar-angular": "^3.0.0-beta.12",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.14.5",
-    "swiper": "11.0.4",
-    "tslib": "2.6.2",
-    "zone.js": "~0.15.0"
+    "sweetalert2": "^11.17.2",
+    "swiper": "11.0.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.1",
