--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^19.0.0",
     "@angular/animations": "^19.2.1",
     "@angular/cdk": "^19.2.2",
     "@angular/common": "^19.2.1",
@@ -42,11 +43,13 @@
     "angular-animations": "^0.11.0",
     "angular-calendar": "^0.31.0",
     "angular-shepherd": "^19.0.2",
+    "angularx-flatpickr": "^8.1.0",
     "apexcharts": "^4.0.0",
     "bootstrap": "5.3.3",
-    "feather-icons": "4.29.1",
-    "gzipper": "^7.2.0",
     "brackets-manager": "^1.6.4",
+    "feather-icons": "4.29.1",
+    "flatpickr": "^4.6.13",
+    "gzipper": "^7.2.0",
     "i18n-iso-countries": "^7.7.0",
     "monaco-editor": "^0.44.0",
     "ng-apexcharts": "^1.12.0",
@@ -63,7 +66,7 @@
     "ngx-scrollbar": "^13.0.3",
     "ngx-skeleton-loader": "^8.1.0",
     "ngx-spinner": "^16.0.2",
-    "ngx-toastr": "18.0.0",
+    "ngx-toastr": "^19.0.0",
     "node-waves": "0.7.6",
     "nouislider": "15.7.1",
     "primeng": "^17.18.12",
