--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
       "@contests/*": ["app/modules/contests/*"],
       "@challenges/*": ["app/modules/challenges/*"],
       "@arena/*": ["app/modules/arena/*"],
+      "@testing/*": ["app/modules/testing/*"],
       "@courses/*": ["app/modules/courses/*"],
       "@users/*": ["app/modules/users/*"],
       "@auth": ["app/modules/auth"],
