--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,6 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            cd /home/cpython/client && git pull && npm run build-prod && gzipper compress ./dist && npm run move-index && \
+            cd /home/cpython/client && git pull && npm run build-prod && gzipper compress ./dist && \
             rm -r /home/cpython/server/static/frontend && mv /home/cpython/client/dist/browser /home/cpython/server/static/frontend && \
             systemctl restart kep@gunicorn
